--- a/index.html
+++ b/index.html
@@ -90,7 +90,37 @@
 <section>
   <h2>Support & Contact</h2>
   <p>
-    Have a question or need help? A support form will be available here soon.
+    Use the form below to send a message to Fast Current Electric LLC.
+    This form is for non-emergency questions and service requests.
+  </p>
+
+  <form action="https://formspree.io/f/mojqoboz" method="POST">
+    <p>
+      <label>
+        Name<br>
+        <input type="text" name="name" required>
+      </label>
+    </p>
+
+    <p>
+      <label>
+        Phone (optional)<br>
+        <input type="tel" name="phone">
+      </label>
+    </p>
+
+    <p>
+      <label>
+        Message<br>
+        <textarea name="message" rows="4" required></textarea>
+      </label>
+    </p>
+
+    <button type="submit">Send Message</button>
+  </form>
+
+  <p style="font-size: 0.9rem;">
+    For emergencies, call 911.
   </p>
 </section>
 
