--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; margin:0; line-height:1.6; color:#222; }
-    header { background:#0b3c5d; color:#fff; padding:2rem; text-align:center; }
+    header { background:#0b3c5d; color:#fff; padding:1rem 2rem; text-align:center; }
+    header img { max-height:80px; display:block; margin:0 auto 1rem; }
     nav { background:#07426a; padding:0.5rem; text-align:center; }
     nav a { color:#fff; margin:0 1rem; text-decoration:none; font-weight:bold; }
     section { padding:2rem; max-width:900px; margin:auto; }
@@ -16,6 +17,7 @@
 <body>
 
 <header>
+  <img src="images/logo.png" alt="Fast Current Electric LLC Logo">
   <h1>Fast Current Electric LLC</h1>
   <p>Residential Electrical Services & Safety Education</p>
 </header>
@@ -25,6 +27,7 @@
   <a href="services.html">Services</a>
   <a href="tips.html">DIY Tips</a>
   <a href="contact.html">Contact</a>
+  <a href="why-choose-us.html">Why Choose Us</a>
 </nav>
 
 <section>
@@ -38,6 +41,10 @@
 <footer>
   <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
+
+</body>
+</html>
+
 
 </body>
 </html>
