--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; margin:0; line-height:1.6; color:#222; }
-    header { background:#0b3c5d; color:#fff; padding:2rem; text-align:center; }
+    header { background:#0b3c5d; color:#fff; padding:1rem 2rem; text-align:center; }
+    header img { max-height:80px; display:block; margin:0 auto 1rem; }
     nav { background:#07426a; padding:0.5rem; text-align:center; }
     nav a { color:#fff; margin:0 1rem; text-decoration:none; font-weight:bold; }
     section { padding:2rem; max-width:900px; margin:auto; }
@@ -16,6 +17,7 @@
 <body>
 
 <header>
+  <img src="images/logo.png" alt="Fast Current Electric LLC Logo">
   <h1>Why Choose Fast Current Electric LLC</h1>
 </header>
 
@@ -44,6 +46,12 @@
 </section>
 
 <footer>
+  <p>&copy; 2025 Fast Current Electric LLC</p>
+</footer>
+
+</body>
+</html>
+
   <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
 
