--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -17,7 +17,7 @@
 <body>
 
 <header>
-  <img src="images/logo.png" alt="Fast Current Electric LLC Logo">
+  <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" style="max-height:80px;">
   <h1>Why Choose Fast Current Electric LLC</h1>
 </header>
 
