--- a/index.html
+++ b/index.html
@@ -5,46 +5,50 @@
   <title>Fast Current Electric LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; line-height:1.6; color:#222; }
-    header { background:#0b3c5d; color:#fff; padding:1rem 2rem; text-align:center; }
-    header img { max-height:80px; display:block; margin:0 auto 1rem; }
-    nav { background:#07426a; padding:0.5rem; text-align:center; }
-    nav a { color:#fff; margin:0 1rem; text-decoration:none; font-weight:bold; }
-    section { padding:2rem; max-width:900px; margin:auto; }
-    footer { background:#f4f4f4; text-align:center; padding:1rem; font-size:0.9rem; }
+    body { font-family: Arial, sans-serif; margin: 0; color: #222; }
+    .site-header {
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
+      background: #0b3c5d;
+      color: #fff;
+      padding: 1.5rem 2rem;
+    }
+    .logo { max-height: 160px; width: auto; }
+    .header-text h1 { margin: 0; }
+    .header-text p { margin: .25rem 0 0; opacity: .9; }
+    section { padding: 2rem; max-width: 900px; margin: auto; }
+    footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: .9rem; }
+    @media (max-width: 600px) {
+      .site-header { flex-direction: column; text-align: center; }
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" style="max-height:160px;">
-  <h1>Fast Current Electric LLC</h1>
-  <p>Residential Electrical Services & Safety Education</p>
+<header class="site-header">
+  <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" class="logo">
+  <div class="header-text">
+    <h1>Fast Current Electric LLC</h1>
+    <p>Residential Electrical Services & Safety Education</p>
+  </div>
 </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
-  <a href="tips.html">DIY Tips</a>
-  <a href="contact.html">Contact</a>
-  <a href="why-choose-us.html">Why Choose Us</a>
-</nav>
-
 <section>
-  <h2>Welcome to Fast Current Electric LLC</h2>
+  <h2>Welcome</h2>
   <p>
-    We provide safe, reliable residential electrical services and tips to help homeowners handle basic projects safely.  
-    Navigate through the sections above to learn more, see tips, or contact us for service.
+    Fast Current Electric LLC provides reliable residential electrical services
+    with a focus on safety, education, and honest workmanship.
   </p>
 </section>
 
 <footer>
+  <p>
+    📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com
+  </p>
   <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
 
 </body>
 </html>
 
-
-</body>
-</html>
