--- a/services.html
+++ b/services.html
@@ -2,41 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Services - Fast Current Electric LLC</title>
+  <title>Services | Fast Current Electric LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; line-height:1.6; color:#222; }
-    header { background:#0b3c5d; color:#fff; padding:1rem 2rem; text-align:center; }
-    header img { max-height:80px; display:block; margin:0 auto 1rem; }
-    nav { background:#07426a; padding:0.5rem; text-align:center; }
-    nav a { color:#fff; margin:0 1rem; text-decoration:none; font-weight:bold; }
-    section { padding:2rem; max-width:900px; margin:auto; }
-    .services { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:1rem; }
-    .card { border:1px solid #ddd; padding:1rem; border-radius:5px; }
-    footer { background:#f4f4f4; text-align:center; padding:1rem; font-size:0.9rem; }
+    body { font-family: Arial, sans-serif; margin: 0; color: #222; }
+    .site-header {
+      display: flex; align-items: center; gap: 1.5rem;
+      background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
+    }
+    .logo { max-height: 160px; }
+    section { padding: 2rem; max-width: 900px; margin: auto; }
+    ul { line-height: 1.8; }
+    footer { background: #f4f4f4; text-align: center; padding: 1rem; }
+    @media (max-width: 600px) {
+      .site-header { flex-direction: column; text-align: center; }
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" style="max-height:160px;">
+<header class="site-header">
+  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <h1>Our Services</h1>
 </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
-  <a href="tips.html">DIY Tips</a>
-  <a href="contact.html">Contact</a>
-  <a href="why-choose-us.html">Why Choose Us</a>
-</nav>
-
-<section class="services">
-  <div class="card">Outlet & Switch Replacement</div>
-  <div class="card">Lighting & Ceiling Fans</div>
-  <div class="card">Electrical Troubleshooting</div>
-  <div class="card">Panel & Safety Inspections</div>
+<section>
+  <ul>
+    <li>Outlet & Switch Replacement</li>
+    <li>Lighting & Ceiling Fan Installation</li>
+    <li>Electrical Troubleshooting</li>
+    <li>Panel & Safety Inspections</li>
+  </ul>
 </section>
+
+<footer>
+  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
+</footer>
+
+</body>
+</html>
 
 <footer>
   <p>&copy; 2025 Fast Current Electric LLC</p>
