--- a/tips.html
+++ b/tips.html
@@ -2,49 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DIY Tips - Fast Current Electric LLC</title>
+  <title>Safety Tips | Fast Current Electric LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; line-height:1.6; color:#222; }
-    header { background:#0b3c5d; color:#fff; padding:1rem 2rem; text-align:center; }
-    header img { max-height:80px; display:block; margin:0 auto 1rem; }
-    nav { background:#07426a; padding:0.5rem; text-align:center; }
-    nav a { color:#fff; margin:0 1rem; text-decoration:none; font-weight:bold; }
-    section { padding:2rem; max-width:900px; margin:auto; }
-    .tips { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:1rem; }
-    .card { border:1px solid #ddd; padding:1rem; border-radius:5px; }
-    footer { background:#f4f4f4; text-align:center; padding:1rem; font-size:0.9rem; }
+    body { font-family: Arial, sans-serif; margin: 0; }
+    .site-header {
+      display: flex; align-items: center; gap: 1.5rem;
+      background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
+    }
+    .logo { max-height: 160px; }
+    section { padding: 2rem; max-width: 900px; margin: auto; }
+    footer { background: #f4f4f4; text-align: center; padding: 1rem; }
+    @media (max-width: 600px) {
+      .site-header { flex-direction: column; text-align: center; }
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" style="max-height:160px;">
-  <h1>DIY Electrical Safety Tips</h1>
+<header class="site-header">
+  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <h1>Electrical Safety Tips</h1>
 </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
-  <a href="tips.html">DIY Tips</a>
-  <a href="contact.html">Contact</a>
-  <a href="why-choose-us.html">Why Choose Us</a>
-</nav>
-
-<section class="tips">
-  <div class="card">
-    <strong>Resetting a Breaker</strong>
-    <p>Always turn the breaker fully off before switching it back on.</p>
-  </div>
-  <div class="card">
-    <strong>GFCI Testing</strong>
-    <p>Test GFCI outlets monthly using the test and reset buttons.</p>
-  </div>
-  <div class="card">
-    <strong>Flickering Lights</strong>
-    <p>Frequent flickering can indicate loose wiring and should be inspected.</p>
-  </div>
+<section>
+  <p><strong>Resetting Breakers:</strong> Always switch fully off before back on.</p>
+  <p><strong>GFCI Outlets:</strong> Test monthly using the test and reset buttons.</p>
+  <p><strong>Flickering Lights:</strong> Can indicate loose wiring.</p>
 </section>
+
+<footer>
+  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
+</footer>
+
+</body>
+</html>
 
 <footer>
   <p>&copy; 2025 Fast Current Electric LLC</p>
