--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -2,51 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Why Choose Us - Fast Current Electric LLC</title>
+  <title>Why Choose Us | Fast Current Electric LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; line-height:1.6; color:#222; }
-    header { background:#0b3c5d; color:#fff; padding:1rem 2rem; text-align:center; }
-    header img { max-height:80px; display:block; margin:0 auto 1rem; }
-    nav { background:#07426a; padding:0.5rem; text-align:center; }
-    nav a { color:#fff; margin:0 1rem; text-decoration:none; font-weight:bold; }
-    section { padding:2rem; max-width:900px; margin:auto; }
-    footer { background:#f4f4f4; text-align:center; padding:1rem; font-size:0.9rem; }
+    body { font-family: Arial, sans-serif; margin: 0; }
+    .site-header {
+      display: flex; align-items: center; gap: 1.5rem;
+      background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
+    }
+    .logo { max-height: 160px; }
+    section { padding: 2rem; max-width: 900px; margin: auto; }
+    footer { background: #f4f4f4; text-align: center; padding: 1rem; }
+    @media (max-width: 600px) {
+      .site-header { flex-direction: column; text-align: center; }
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" style="max-height:160px;">
-  <h1>Why Choose Fast Current Electric LLC</h1>
+<header class="site-header">
+  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <h1>Why Choose Fast Current Electric</h1>
 </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
-  <a href="tips.html">DIY Tips</a>
-  <a href="contact.html">Contact</a>
-  <a href="why-choose-us.html">Why Choose Us</a>
-</nav>
-
 <section>
-  <h2>Our Commitment</h2>
   <p>
-    At Fast Current Electric LLC, we focus on safety, reliability, and education. Our goal is to help homeowners understand when a project is safe to handle and when it’s best to call a professional.
+    We prioritize safety, transparency, and education. Our goal is to help
+    homeowners make informed decisions and know when it is time to call
+    a professional.
   </p>
-
-  <h2>Why Trust Us?</h2>
-  <ul>
-    <li>Licensed and insured electricians</li>
-    <li>Transparent pricing and honest recommendations</li>
-    <li>Quick response and reliable service</li>
-    <li>Educational tips to keep your home safe</li>
-    <li>Customer satisfaction is our priority</li>
-  </ul>
 </section>
 
 <footer>
-  <p>&copy; 2025 Fast Current Electric LLC</p>
+  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
 </footer>
 
 </body>
