--- a/contact.html
+++ b/contact.html
@@ -2,70 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact - Fast Current Electric LLC</title>
+  <title>Contact | Fast Current Electric LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; line-height:1.6; color:#222; }
-    header { background:#0b3c5d; color:#fff; padding:1rem 2rem; text-align:center; }
-    header img { max-height:80px; display:block; margin:0 auto 1rem; }
-    nav { background:#07426a; padding:0.5rem; text-align:center; }
-    nav a { color:#fff; margin:0 1rem; text-decoration:none; font-weight:bold; }
-    section { padding:2rem; max-width:900px; margin:auto; }
-    form input, form textarea { width:100%; padding:0.5rem; margin:0.5rem 0; border-radius:4px; border:1px solid #ccc; }
-    button { background:#0b3c5d; color:#fff; padding:0.5rem 1rem; border:none; border-radius:4px; cursor:pointer; }
-    button:hover { background:#07426a; }
-    footer { background:#f4f4f4; text-align:center; padding:1rem; font-size:0.9rem; }
-    a { color:#0b3c5d; text-decoration:none; }
+    body { font-family: Arial, sans-serif; margin: 0; }
+    .site-header {
+      display: flex; align-items: center; gap: 1.5rem;
+      background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
+    }
+    .logo { max-height: 160px; }
+    section { padding: 2rem; max-width: 900px; margin: auto; }
+    form input, form textarea { width: 100%; padding: .5rem; margin-top: .25rem; }
+    button { padding: .5rem 1rem; margin-top: 1rem; }
+    footer { background: #f4f4f4; text-align: center; padding: 1rem; }
+    @media (max-width: 600px) {
+      .site-header { flex-direction: column; text-align: center; }
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" style="max-height:160px;">
-  <h1>Contact Fast Current Electric LLC</h1>
+<header class="site-header">
+  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <h1>Contact Us</h1>
 </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
-  <a href="tips.html">DIY Tips</a>
-  <a href="contact.html">Contact</a>
-  <a href="why-choose-us.html">Why Choose Us</a>
-</nav>
-
 <section>
-  <p>
-    Reach us directly or send a message using the form below.
-  </p>
-
-  <p>
-    <strong>Phone:</strong> <a href="tel:+13303459389">(330) 345-9389</a><br>
-    <strong>Email:</strong> <a href="mailto:S.henderson@fastcurrentelectric.com">S.henderson@fastcurrentelectric.com</a>
-  </p>
+  <p>📞 (330) 345-9389</p>
+  <p>✉️ S.henderson@fastcurrentelectric.com</p>
 
   <form action="https://formspree.io/f/mojqoboz" method="POST">
-    <p>
-      <label>Name<br>
-        <input type="text" name="name" required>
-      </label>
-    </p>
-
-    <p>
-      <label>Phone (optional)<br>
-        <input type="tel" name="phone">
-      </label>
-    </p>
-
-    <p>
-      <label>Message<br>
-        <textarea name="message" rows="4" required></textarea>
-      </label>
-    </p>
-
+    <label>Name<br><input type="text" name="name" required></label><br><br>
+    <label>Phone<br><input type="tel" name="phone"></label><br><br>
+    <label>Message<br><textarea name="message" rows="4" required></textarea></label><br>
     <button type="submit">Send Message</button>
   </form>
-
-  <p style="font-size:0.9rem;">For emergencies, call 911.</p>
 </section>
 
 <footer>
