--- a/services.html
+++ b/services.html
@@ -5,14 +5,16 @@
   <title>Services | Fast Current Electric LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; color: #222; }
+    body { font-family: Arial, sans-serif; margin: 0; }
     .site-header {
       display: flex; align-items: center; gap: 1.5rem;
       background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
     }
     .logo { max-height: 160px; }
+    nav { background: #062a40; padding: .75rem; text-align: center; }
+    nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
-    ul { line-height: 1.8; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) {
       .site-header { flex-direction: column; text-align: center; }
@@ -22,9 +24,17 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.jpg" class="logo" alt="Logo">
   <h1>Our Services</h1>
 </header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="services.html">Services</a>
+  <a href="tips.html">Safety Tips</a>
+  <a href="why-choose-us.html">Why Choose Us</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
 <section>
   <ul>
@@ -37,13 +47,6 @@
 
 <footer>
   <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
-</footer>
-
-</body>
-</html>
-
-<footer>
-  <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
 
 </body>
