--- a/tips.html
+++ b/tips.html
@@ -11,6 +11,9 @@
       background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
     }
     .logo { max-height: 160px; }
+    nav { background: #062a40; padding: .75rem; text-align: center; }
+    nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) {
@@ -21,25 +24,26 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.jpg" class="logo" alt="Logo">
   <h1>Electrical Safety Tips</h1>
 </header>
 
+<nav>
+  <a href="index.html">Home</a>
+  <a href="services.html">Services</a>
+  <a href="tips.html">Safety Tips</a>
+  <a href="why-choose-us.html">Why Choose Us</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
 <section>
-  <p><strong>Resetting Breakers:</strong> Always switch fully off before back on.</p>
-  <p><strong>GFCI Outlets:</strong> Test monthly using the test and reset buttons.</p>
-  <p><strong>Flickering Lights:</strong> Can indicate loose wiring.</p>
+  <p><strong>Reset breakers:</strong> Always switch fully off before turning back on.</p>
+  <p><strong>GFCI outlets:</strong> Test monthly using the test button.</p>
+  <p><strong>Flickering lights:</strong> Often indicate loose wiring.</p>
 </section>
 
 <footer>
   <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
-</footer>
-
-</body>
-</html>
-
-<footer>
-  <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
 
 </body>
