--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -11,6 +11,9 @@
       background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
     }
     .logo { max-height: 160px; }
+    nav { background: #062a40; padding: .75rem; text-align: center; }
+    nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) {
@@ -21,15 +24,22 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.jpg" class="logo" alt="Logo">
   <h1>Why Choose Fast Current Electric</h1>
 </header>
 
+<nav>
+  <a href="index.html">Home</a>
+  <a href="services.html">Services</a>
+  <a href="tips.html">Safety Tips</a>
+  <a href="why-choose-us.html">Why Choose Us</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
 <section>
   <p>
-    We prioritize safety, transparency, and education. Our goal is to help
-    homeowners make informed decisions and know when it is time to call
-    a professional.
+    We focus on safety, honesty, and educating homeowners. Our goal is to help
+    you understand your electrical system and know when to call a professional.
   </p>
 </section>
 
@@ -38,4 +48,6 @@
 </footer>
 
 </body>
+</html>
+
 </html>
