--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,12 @@
       background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
     }
     .logo { max-height: 160px; }
+    nav { background: #062a40; padding: .75rem; text-align: center; }
+    nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
-    form input, form textarea { width: 100%; padding: .5rem; margin-top: .25rem; }
-    button { padding: .5rem 1rem; margin-top: 1rem; }
+    form input, form textarea { width: 100%; padding: .5rem; }
+    button { margin-top: 1rem; padding: .5rem 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) {
       .site-header { flex-direction: column; text-align: center; }
@@ -23,9 +26,17 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
+  <img src="images/FCELLC.jpg" class="logo" alt="Logo">
   <h1>Contact Us</h1>
 </header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="services.html">Services</a>
+  <a href="tips.html">Safety Tips</a>
+  <a href="why-choose-us.html">Why Choose Us</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
 <section>
   <p>📞 (330) 345-9389</p>
