--- a/index.html
+++ b/index.html
@@ -2,31 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
-  <title>
-    Residential Electrician in Akron OH | Fast Current Electric LLC
-  </title>
-
-  <meta name="description" content="
-    Fast Current Electric LLC provides residential electrical services and safety education
-    in Akron OH, Wooster OH, Canton OH, Massillon OH, Hartville OH, Barberton OH,
-    Copley OH, Portage Lakes OH, New Franklin OH, and Canal Fulton OH.
-  ">
-
+  <title>Residential Electrician in Akron OH | Fast Current Electric LLC</title>
+  <meta name="description" content="Fast Current Electric LLC provides residential electrical services and safety education in Akron OH, Wooster OH, Canton OH, Massillon OH, Hartville OH, Barberton OH, Copley OH, Portage Lakes OH, New Franklin OH, and Canal Fulton OH.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
     .site-header {
-      display: flex; align-items: center; gap: 1.5rem;
-      background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
+      background: #0b3c5d;
+      color: #fff;
+      padding: 1.5rem 2rem;
     }
-    .logo { max-height: 160px; }
-    nav { background: #062a40; padding: .75rem; text-align: center; }
-    nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
+    .logo { max-height: 160px; width: auto; }
+    nav {
+      background: #062a40;
+      padding: 0.75rem;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
     nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
-    footer { background: #f4f4f4; text-align: center; padding: 1rem; }
+    footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
     @media (max-width: 600px) {
       .site-header { flex-direction: column; text-align: center; }
     }
@@ -36,7 +40,7 @@
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" class="logo" alt="Fast Current Electric LLC Logo">
+  <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" class="logo">
   <div>
     <h1>Fast Current Electric LLC</h1>
     <p>Residential Electrical Services & Safety Education</p>
@@ -54,8 +58,9 @@
 <section>
   <h2>Serving Northeast Ohio</h2>
   <p>
-    We proudly serve Akron, Wooster, Canton, Massillon, Hartville, Barberton,
-    Copley, Portage Lakes, New Franklin, and Canal Fulton.
+    Fast Current Electric LLC proudly serves Akron, Wooster, Canton, Massillon,
+    Hartville, Barberton, Copley, Portage Lakes, New Franklin, and Canal Fulton.
+    We focus on safe, reliable residential electrical work and homeowner education.
   </p>
 </section>
 
