--- a/services.html
+++ b/services.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Services | Fast Current Electric LLC</title>
+  <title>Electrical Services in Akron OH | Fast Current Electric LLC</title>
+  <meta name="description" content="Residential electrical services including troubleshooting, lighting installation, outlet replacement, and safety inspections in Akron OH, Wooster OH, Canton OH, Massillon OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
     .site-header {
@@ -11,20 +13,22 @@
       background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
     }
     .logo { max-height: 160px; }
-    nav { background: #062a40; padding: .75rem; text-align: center; }
+    nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
+    ul { line-height: 1.8; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) {
       .site-header { flex-direction: column; text-align: center; }
     }
   </style>
 </head>
+
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" class="logo" alt="Logo">
+  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <h1>Our Services</h1>
 </header>
 
@@ -38,10 +42,10 @@
 
 <section>
   <ul>
-    <li>Outlet & Switch Replacement</li>
-    <li>Lighting & Ceiling Fan Installation</li>
+    <li>Outlet and Switch Replacement</li>
+    <li>Lighting and Ceiling Fan Installation</li>
     <li>Electrical Troubleshooting</li>
-    <li>Panel & Safety Inspections</li>
+    <li>Panel and Safety Inspections</li>
   </ul>
 </section>
 
