--- a/tips.html
+++ b/tips.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Safety Tips | Fast Current Electric LLC</title>
+  <title>Electrical Safety Tips for Homeowners | Fast Current Electric LLC</title>
+  <meta name="description" content="Electrical safety tips for homeowners in Akron OH and surrounding Northeast Ohio communities, provided by Fast Current Electric LLC.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
     .site-header {
@@ -11,7 +13,7 @@
       background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
     }
     .logo { max-height: 160px; }
-    nav { background: #062a40; padding: .75rem; text-align: center; }
+    nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
@@ -21,10 +23,11 @@
     }
   </style>
 </head>
+
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" class="logo" alt="Logo">
+  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <h1>Electrical Safety Tips</h1>
 </header>
 
@@ -37,9 +40,9 @@
 </nav>
 
 <section>
-  <p><strong>Reset breakers:</strong> Always switch fully off before turning back on.</p>
-  <p><strong>GFCI outlets:</strong> Test monthly using the test button.</p>
-  <p><strong>Flickering lights:</strong> Often indicate loose wiring.</p>
+  <p><strong>Resetting breakers:</strong> Always turn the breaker fully off before switching it back on.</p>
+  <p><strong>GFCI outlets:</strong> Test monthly using the test and reset buttons.</p>
+  <p><strong>Flickering lights:</strong> Persistent flickering can indicate loose wiring.</p>
 </section>
 
 <footer>
