--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Why Choose Us | Fast Current Electric LLC</title>
+  <title>Trusted Electrician in Akron OH | Fast Current Electric LLC</title>
+  <meta name="description" content="Homeowners across Akron OH, Canton OH, and surrounding areas trust Fast Current Electric LLC for safe, honest, and reliable residential electrical services.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
     .site-header {
@@ -11,7 +13,7 @@
       background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
     }
     .logo { max-height: 160px; }
-    nav { background: #062a40; padding: .75rem; text-align: center; }
+    nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
@@ -21,10 +23,11 @@
     }
   </style>
 </head>
+
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" class="logo" alt="Logo">
+  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <h1>Why Choose Fast Current Electric</h1>
 </header>
 
@@ -38,8 +41,9 @@
 
 <section>
   <p>
-    We focus on safety, honesty, and educating homeowners. Our goal is to help
-    you understand your electrical system and know when to call a professional.
+    We focus on safety, honesty, and education. Our goal is to help homeowners
+    understand their electrical systems and know when professional service
+    is necessary.
   </p>
 </section>
 
@@ -48,6 +52,4 @@
 </footer>
 
 </body>
-</html>
-
 </html>
