--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Fast Current Electric LLC</title>
+  <title>Contact an Electrician in Akron OH | Fast Current Electric LLC</title>
+  <meta name="description" content="Contact Fast Current Electric LLC to schedule residential electrical service in Akron OH, Wooster OH, Canton OH, Massillon OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
     .site-header {
@@ -11,22 +13,23 @@
       background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
     }
     .logo { max-height: 160px; }
-    nav { background: #062a40; padding: .75rem; text-align: center; }
+    nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
-    form input, form textarea { width: 100%; padding: .5rem; }
-    button { margin-top: 1rem; padding: .5rem 1rem; }
+    form input, form textarea { width: 100%; padding: 0.5rem; }
+    button { margin-top: 1rem; padding: 0.5rem 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) {
       .site-header { flex-direction: column; text-align: center; }
     }
   </style>
 </head>
+
 <body>
 
 <header class="site-header">
-  <img src="images/FCELLC.jpg" class="logo" alt="Logo">
+  <img src="images/FCELLC.jpg" alt="Logo" class="logo">
   <h1>Contact Us</h1>
 </header>
 
