--- a/index.html
+++ b/index.html
@@ -6,34 +6,18 @@
   <meta name="description" content="Fast Current Electric LLC provides residential electrical services and safety education in Akron OH, Wooster OH, Canton OH, Massillon OH, Hartville OH, Barberton OH, Copley OH, Portage Lakes OH, New Franklin OH, and Canal Fulton OH.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="icon" href="images/favicon.png" type="image/png">
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header {
-      display: flex;
-      align-items: center;
-      gap: 1.5rem;
-      background: #0b3c5d;
-      color: #fff;
-      padding: 1.5rem 2rem;
-    }
+    .site-header { display: flex; align-items: center; gap: 1.5rem; background: #0b3c5d; color: #fff; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
-    nav {
-      background: #062a40;
-      padding: 0.75rem;
-      text-align: center;
-    }
-    nav a {
-      color: #fff;
-      margin: 0 1rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
+    nav { background: #062a40; padding: 0.75rem; text-align: center; }
+    nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
-    @media (max-width: 600px) {
-      .site-header { flex-direction: column; text-align: center; }
-    }
+    @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
   </style>
 </head>
 
