--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -6,21 +6,18 @@
   <meta name="description" content="Homeowners across Akron OH, Canton OH, and surrounding areas trust Fast Current Electric LLC for safe, honest, and reliable residential electrical services.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="icon" href="images/favicon.png" type="image/png">
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
-    .site-header {
-      display: flex; align-items: center; gap: 1.5rem;
-      background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
-    }
+    .site-header { display: flex; align-items: center; gap: 1.5rem; background: #0b3c5d; color: #fff; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
-    @media (max-width: 600px) {
-      .site-header { flex-direction: column; text-align: center; }
-    }
+    @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
   </style>
 </head>
 
@@ -40,11 +37,7 @@
 </nav>
 
 <section>
-  <p>
-    We focus on safety, honesty, and education. Our goal is to help homeowners
-    understand their electrical systems and know when professional service
-    is necessary.
-  </p>
+  <p>We focus on safety, honesty, and education. Our goal is to help homeowners understand their electrical systems and know when professional service is necessary.</p>
 </section>
 
 <footer>
