--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,11 @@
   <meta name="description" content="Contact Fast Current Electric LLC to schedule residential electrical service in Akron OH, Wooster OH, Canton OH, Massillon OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="icon" href="images/favicon.png" type="image/png">
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
-    .site-header {
-      display: flex; align-items: center; gap: 1.5rem;
-      background: #0b3c5d; color: #fff; padding: 1.5rem 2rem;
-    }
+    .site-header { display: flex; align-items: center; gap: 1.5rem; background: #0b3c5d; color: #fff; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
@@ -20,9 +19,7 @@
     form input, form textarea { width: 100%; padding: 0.5rem; }
     button { margin-top: 1rem; padding: 0.5rem 1rem; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
-    @media (max-width: 600px) {
-      .site-header { flex-direction: column; text-align: center; }
-    }
+    @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
   </style>
 </head>
 
