--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
+    nav a.active { text-decoration: underline; color: #FFD700; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
@@ -25,33 +26,3 @@
 
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" class="logo">
-  <div>
-    <h1>Fast Current Electric LLC</h1>
-    <p>Residential Electrical Services & Safety Education</p>
-  </div>
-</header>
-
-<nav>
-  <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
-  <a href="tips.html">Safety Tips</a>
-  <a href="why-choose-us.html">Why Choose Us</a>
-  <a href="contact.html">Contact</a>
-</nav>
-
-<section>
-  <h2>Serving Northeast Ohio</h2>
-  <p>
-    Fast Current Electric LLC proudly serves Akron, Wooster, Canton, Massillon,
-    Hartville, Barberton, Copley, Portage Lakes, New Franklin, and Canal Fulton.
-    We focus on safe, reliable residential electrical work and homeowner education.
-  </p>
-</section>
-
-<footer>
-  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
-  <p>&copy; 2025 Fast Current Electric LLC</p>
-</footer>
-
-</body>
-</html>
