--- a/services.html
+++ b/services.html
@@ -15,6 +15,7 @@
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
+    nav a.active { text-decoration: underline; color: #FFD700; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
     ul { line-height: 1.8; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
@@ -31,7 +32,7 @@
 
 <nav>
   <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
+  <a href="services.html" class="active">Services</a>
   <a href="tips.html">Safety Tips</a>
   <a href="why-choose-us.html">Why Choose Us</a>
   <a href="contact.html">Contact</a>
@@ -47,12 +48,6 @@
 </section>
 
 <footer>
-  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
-</footer>
-
-</body>
-</html>
-
   <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
 </footer>
 
