--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <style>
     body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header { display: flex; align-items: center; gap: 1.5rem; background: #0b3c5d; color: #fff; padding: 1.5rem 2rem; }
+    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: #fff; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
@@ -26,3 +26,33 @@
 
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Fast Current Electric LLC Logo" class="logo">
+  <div>
+    <h1>Fast Current Electric LLC</h1>
+    <p>Residential Electrical Services & Safety Education</p>
+  </div>
+</header>
+
+<nav>
+  <a href="index.html" class="active">Home</a>
+  <a href="services.html">Services</a>
+  <a href="tips.html">Safety Tips</a>
+  <a href="why-choose-us.html">Why Choose Us</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<section>
+  <h2>Serving Northeast Ohio</h2>
+  <p>
+    Fast Current Electric LLC proudly serves Akron, Wooster, Canton, Massillon,
+    Hartville, Barberton, Copley, Portage Lakes, New Franklin, and Canal Fulton.
+    We focus on safe, reliable residential electrical work and homeowner education.
+  </p>
+</section>
+
+<footer>
+  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
+  <p>&copy; 2025 Fast Current Electric LLC</p>
+</footer>
+
+</body>
+</html>
