--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,18 @@
     <label>Message<br><textarea name="message" rows="4" required></textarea></label><br>
     <button type="submit">Send Message</button>
   </form>
+
+  <h2>Service Area</h2>
+  <p>Fast Current Electric LLC serves Akron, Wooster, Canton, Massillon, Hartville, Barberton, Copley, Portage Lakes, New Franklin, and Canal Fulton, OH.</p>
+
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3047.8470051148216!2d-81.52690508460984!3d41.08144557929764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8830f3d54e2294ef%3A0x3a7a8ecf3f8ed07b!2sAkron%2C%20OH!5e0!3m2!1sen!2sus!4v1704432112345!5m2!1sen!2sus"
+    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
 </section>
 
 <footer>
+  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
   <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
 
