--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Trusted Electrician in Akron OH | Fast Current Electric LLC</title>
-  <meta name="description" content="Homeowners across Akron OH, Canton OH, and surrounding areas trust Fast Current Electric LLC for safe, honest, and reliable residential electrical services.">
+  <title>Why Choose Fast Current Electric LLC | Akron OH Electrician</title>
+  <meta name="description" content="Learn why homeowners in Akron OH, Wooster OH, Canton OH, and surrounding areas trust Fast Current Electric LLC for safe and reliable electrical work.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="images/favicon.png" type="image/png">
@@ -12,15 +12,23 @@
     body { font-family: Arial, sans-serif; margin: 0; }
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: #fff; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; }
-    .site-header h1 { text-shadow: 2px 2px 4px rgba(0,0,0,0.7); }
-    section h2 { text-shadow: 1px 1px 2px rgba(0,0,0,0.7); color: #0b3c5d; }
+    .site-header h1 { 
+      text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000,
+                   2px 0 0 #000, 0 2px 0 #000, -2px 0 0 #000, 0 -2px 0 #000;
+    }
+    section h2 { 
+      text-shadow: 1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000; 
+      color: #0b3c5d; 
+    }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
-    section { padding: 2rem; max-width: 900px; margin: auto; }
+    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.8; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
+    a.contact-link { color: #222; text-decoration: none; font-weight: bold; }
+    a.contact-link:hover { text-decoration: underline; }
   </style>
 </head>
 
@@ -28,7 +36,10 @@
 
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
-  <h1>Why Choose Fast Current Electric</h1>
+  <div>
+    <h1>Why Choose Us</h1>
+    <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
+  </div>
 </header>
 
 <nav>
@@ -40,12 +51,18 @@
 </nav>
 
 <section>
-  <h2>Our Promise</h2>
-  <p>We focus on safety, honesty, and education. Our goal is to help homeowners understand their electrical systems and know when professional service is necessary.</p>
+  <h2>Why Choose Fast Current Electric LLC?</h2>
+  <ul>
+    <li><strong>Experience & Reliability:</strong> Our electricians are licensed and highly trained.</li>
+    <li><strong>Safety First:</strong> Every project is handled with strict safety standards.</li>
+    <li><strong>Customer Education:</strong> We explain what’s safe to DIY and when to call a professional.</li>
+    <li><strong>Prompt Service:</strong> Serving Akron, Wooster, Canton, Massillon, Hartville, Barberton, Copley, Portage Lakes, New Franklin, and Canal Fulton.</li>
+  </ul>
 </section>
 
 <footer>
-  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
+  <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
+  <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
 
 </body>
