--- a/tips.html
+++ b/tips.html
@@ -9,23 +9,30 @@
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
+    body { font-family: Arial, sans-serif; margin: 0; color: #222; }
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: #fff; padding: 1.5rem 2rem; }
-    .logo { max-height: 160px; }
+    .logo { max-height: 160px; width: auto; }
     .site-header h1 { 
-      text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000,
-                   2px 0 0 #000, 0 2px 0 #000, -2px 0 0 #000, 0 -2px 0 #000;
+      text-shadow: 
+         3px 3px 0 #000, -3px 3px 0 #000, 
+         3px -3px 0 #000, -3px -3px 0 #000,
+         3px 0 0 #000, 0 3px 0 #000,
+        -3px 0 0 #000, 0 -3px 0 #000;
     }
     section h2 { 
-      text-shadow: 1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000; 
+      text-shadow: 
+         2px 2px 0 #000, -2px 2px 0 #000, 
+         2px -2px 0 #000, -2px -2px 0 #000,
+         2px 0 0 #000, 0 2px 0 #000,
+        -2px 0 0 #000, 0 -2px 0 #000;
       color: #0b3c5d; 
     }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
-    section { padding: 2rem; max-width: 900px; margin: auto; }
-    footer { background: #f4f4f4; text-align: center; padding: 1rem; }
+    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.8; }
+    footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
     a.contact-link { color: #222; text-decoration: none; font-weight: bold; }
     a.contact-link:hover { text-decoration: underline; }
